добавил модели и выполнил миграцию

--- a/NotesAndReminders.Server/appsettings.json
+++ b/NotesAndReminders.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultString": "Host=localhost;Port=5432;Database=RemindersAndNotesDb;Username=postgres;Password=Averyanov89_ext$28;"
+  }
 }
