--- a/NotesAndReminders.Server/NotesAndReminders.Server.csproj
+++ b/NotesAndReminders.Server/NotesAndReminders.Server.csproj
@@ -13,6 +13,11 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
@@ -20,6 +25,7 @@
     <ProjectReference Include="..\notesandreminders.client\notesandreminders.client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
+    <ProjectReference Include="..\NotesAndReminders.DataBase\NotesAndReminders.DataBase.csproj" />
   </ItemGroup>
 
 </Project>
