--- a/notesandreminders.client/angular.json
+++ b/notesandreminders.client/angular.json
@@ -35,6 +35,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
               "node_modules/@ng-select/ng-select/themes/default.theme.css"
             ],
