--- a/notesandreminders.client/package.json
+++ b/notesandreminders.client/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@ng-select/ng-select": "^12.0.7",
+    "@popperjs/core": "^2.11.8",
+    "angularjs-bootstrap-datetimepicker": "^1.1.4",
+    "bootstrap": "^5.3.2",
     "jest-editor-support": "*",
     "run-script-os": "*",
     "rxjs": "~7.8.0",
@@ -32,6 +36,7 @@
     "@angular-devkit/build-angular": "^17.2.1",
     "@angular/cli": "^17.2.1",
     "@angular/compiler-cli": "^17.2.0",
+    "@angular/localize": "^17.2.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
