--- a/NotesAndReminders.Server/appsettings.json
+++ b/NotesAndReminders.Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultString": "Host=localhost;Port=5432;Database=*****;Username=*****;Password=******;"
+    "DefaultString": "Host=localhost;Port=5432;Database=RemindersAndNotesDb;Username=postgres;Password=Averyanov89_ext$28;"
   }
 }
